🤞 Update index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="en">
+
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,18 +13,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Major+Mono+Display&display=swap" rel="stylesheet">
     <link rel="icon" href="./assets/content/logo.svg" type="image/x-icon">
-    <meta content="Adam Klement" property="og:title" />
-    <meta content="Osobní portfolio a webovky pro obyčejného člověka z Varů." property="og:description" />
-    <meta content="https://adam-klement.cz" property="og:url" />
-    <meta content="https://cdn.discordapp.com/attachments/885976649743609887/1010481463021543454/embed-photo.png" property="og:image" />
-    <meta content="#8a4bff" data-react-helmet="true" name="theme-color" />
+    <meta content="Friggo.cz" property="og:title" />
+    <meta content="Osobní portfolio a webovky jednoho studenta, který se zajímá o weby a programování." property="og:description" />
+    <meta content="https://friggo.cz" property="og:url" />
+    <meta content="#1eb588" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
-    <title>Adam Klement</title>
+    <title>O mně | Friggo.cz</title>
 </head>
 <body>
   <nav class="navbar navbar-dark navbar-expand-lg py-4 px-4">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://adam-klement.cz">Adam Klement</a>
+      <a class="navbar-brand" href="https://friggo.cz">Friggo</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
         <i class="ph-equals-bold fs-1"></i>
       </button>
@@ -42,7 +42,7 @@
             <a class="nav-link" href="#scrollspyHeading4"><span class="primary-color">04.</span> Kontakt</a>
           </li>
           <li class="nav-item ms-3">
-            <a class="btn btn-outline-primary px-3 py-2" href="https://discord.gg/uceni" target="_Blank">Najdeš mě na Let's Study <i class="ph-discord-logo-bold ms-2"></i></a>
+            <a class="btn btn-outline-primary px-3 py-2" href="https://l.beastblock.cz/discord" target="_Blank">Najdeš mě na BeastBlocku <i class="ph-discord-logo-bold ms-2"></i></a>
           </li>
         </ul>
       </div>
@@ -53,15 +53,15 @@
     <div class="col-xl-9">
       <div class="h-75 d-flex align-items-center">
         <div class="text-center text-lg-start">
-          <h4 class="sub-header" data-aos="fade-up" data-aos-duration="750" data-aos-mirror="true" data-aos-once="true">Zdravíčko, jmenuji se</h4>
-          <h1 class="display-1 fw-bolder" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" data-aos-mirror="true" data-aos-once="true">Adam Klement<br><span class="darker">Forkni si mou stránku!</span></h1>
-          <p class="mt-5 col-lg-9" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="750" data-aos-mirror="true" data-aos-once="true">Je mi 15 let a kódováním stránkek se zabývám přes 2 roky. Není to nic extra, ale myslím si, že má práce nikomu neuškodí a spíše prospěje. Neříkám, že HTML a CSS jsou programovací jazyky. Přidá mi tato věta +10 reputace?</p>
+          <h4 class="sub-header" data-aos="fade-up" data-aos-duration="750" data-aos-mirror="true" data-aos-once="true">Ahoj, jsem</h4>
+          <h1 class="display-1 fw-bolder" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" data-aos-mirror="true" data-aos-once="true">Friggo<br><span class="darker">nebo také Filip.</span></h1>
+          <p class="mt-5 col-lg-9" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="750" data-aos-mirror="true" data-aos-once="true">Jsem student, co pochází z jedné vesnice poblíž Benešova. Zajímám se o vše, co se týká webů, grafiky a programátorství. </p>
           <div class="mt-5 row g-2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1500" data-aos-mirror="true" data-aos-once="true">
             <div class="col-12 col-lg-auto">
-              <a class="btn btn-primary px-4 py-3 me-lg-2" href="https://github.com/Klema4" target="_Blank">Chci taky stránku! <i class="ph-git-fork-bold ms-2"></i></a>
+              <a class="btn btn-primary px-4 py-3 me-lg-2" href="#scrollspyHeading1">Chci vědět více! <i class="ph-git-fork-bold ms-2"></i></a>
             </div>
             <div class="col-12 col-lg-auto">
-              <a class="btn btn-outline-light px-4 py-3" href="https://adam-klement.cz/linktree" target="_Blank">Koukni na Linktree <i class="ph-link-bold ms-2"></i></a>
+              <a class="btn btn-outline-light px-4 py-3" href="https://beastblock.cz/" target="_Blank">Koukni na BeastBlock <i class="ph-link-bold ms-2"></i></a>
             </div>
           </div>
         </div>
@@ -80,30 +80,28 @@
             </div>
           </div>
           <div class="mt-4" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500" data-aos-mirror="true" data-aos-once="true">
-            <p>Jsem 15 letý kluk pocházející z Karlových Varů. Od 3 let jsem začal hrát své první hry na počítači, díky čemuž jsem se nepřestal neustále zajímat o počítače a technologie jako takové. </p>
-            <p>Vše začalo ve svých 8 letech, když jsem dostal svůj první notebook. Na tu dobu to nic extra nebylo ale díky němu jsem začal dělat první Minecraft servery a YouTube videa.</p>
-            <p>V 11 letech jsem dostal novou bednu, která mi pomohla více natáčet videa a dělat co mě baví. Vznikly na ní první grafiky a statické webové stránky. Od té doby aktivně kóduji webové stránky a dělám grafika pro nespočet projektů.</p>
+            <p>Jsem student, co pochází z jedné vesnice poblíž Benešova. Zajímám se o vše, co se týká webů, grafiky a programátorství. Weby jsem začal vytvářet ve svých 11 letech a nadále se sám rozvíjel.</p>
+            <p>Také o sobě často říkám, že jsem hráč. Díky hraní Minecraftu jsem začal dělat věci, co se otáčely okolo serveru – weby a hlavně programování. Mezi mé oblíbené koníčky také patří focení.</p>
+            <p>Progromování mě doprovázelo už od začátku co jsem dostal první počítač. Na něm jsem si tehdy udělal vlastní web pomocí bezplatné služby.. Ale ten se mi nelíbil a tak jsem se naučil programovat. Začátkem roku 2018 jsem se začal věnovat webům naplno! Vznikl tak web pro Za-Play, Heedix a MzdyProVás.</p>
             <p>Zajímá tě, s čím denně pracuji? Podívej se níže!</p>
           </div>
           <div class="row ms-2" data-aos="fade-up" data-aos-duration="750" data-aos-delay="1000" data-aos-mirror="true" data-aos-once="true">
-            <div class="col-auto me-4">
+            <div class="col-auto me-2">
               <ul class="list-group">
-                <li>VSCode (Webovky)</li>
+                <li>VSCode (Webovky a Discord boti)</li>
                 <li>Photoshop (Grafika)</li>
-                <li>Lightroom (Fotografie)</li>
               </ul>
             </div>
             <div class="col-auto">
               <ul class="list-group">
-                <li>Adobe Xd (UI/UX design)</li>
-                <li>Figma (UI/UX design)</li>
-                <li>Unreal Engine (Začátečník)</li>
+                <li>Figma (UI/UX návrhy)</li>
+                <li>Lightroom (Fotografie)</li>
               </ul>
             </div>
           </div>
         </div>
         <div class="col-xl-5 mt-xl-5 pt-xl-4 mt-5 mt-lg-0">
-          <img src="./assets/content/klema.jpg" alt="" class="img-fluid rounded-2 about-me-picture" width="100%" data-aos="fade-right" data-aos-duration="750" data-aos-delay="750" data-aos-mirror="true" data-aos-once="true">
+          <img src="./assets/content/friggo.webp" alt="" class="img-fluid rounded-2 about-me-picture" width="100%" data-aos="fade-right" data-aos-duration="750" data-aos-delay="750" data-aos-mirror="true" data-aos-once="true">
         </div>
       </div>
       <div class="py-lg-5 h-25">
@@ -119,14 +117,23 @@
         </div>
         <div class="d-flex align-items-start">
           <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500" data-aos-mirror="true" data-aos-once="true">
-            <button class="nav-link active text-start btn-work" id="v-pills-lets-study-tab" data-bs-toggle="pill" data-bs-target="#v-pills-lets-study" type="button" role="tab" aria-controls="v-pills-lets-study" aria-selected="true">Let's Study</button>
-            <button class="nav-link text-start btn-work" id="v-pills-beastblock-tab" data-bs-toggle="pill" data-bs-target="#v-pills-beastblock" type="button" role="tab" aria-controls="v-pills-beastblock" aria-selected="false">BeastBlock.cz</button>
-            <button class="nav-link text-start btn-work" id="v-pills-zerotoil-tab" data-bs-toggle="pill" data-bs-target="#v-pills-zerotoil" type="button" role="tab" aria-controls="v-pills-zerotoil" aria-selected="false">ZeroToil Dev</button>
+            <button class="nav-link active text-start btn-work" id="v-pills-beastblock-tab" data-bs-toggle="pill" data-bs-target="#v-pills-beastblock" type="button" role="tab" aria-controls="v-pills-beastblock" aria-selected="true">BeastBlock.cz</button>
+            <!--<button class="nav-link text-start btn-work" id="v-pills-lets-study-tab" data-bs-toggle="pill" data-bs-target="#v-pills-lets-study" type="button" role="tab" aria-controls="v-pills-lets-study" aria-selected="false">Let's Study</button>-->
+            <button class="nav-link text-start btn-work" id="v-pills-gennario-tab" data-bs-toggle="pill" data-bs-target="#v-pills-gennario" type="button" role="tab" aria-controls="v-pills-gennario" aria-selected="false">Gennario Studios</button>
           </div>
           <div class="tab-content" id="v-pills-tabContent" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="250" data-aos-mirror="true" data-aos-once="true">
-            <div class="tab-pane fade show active" id="v-pills-lets-study" role="tabpanel" aria-labelledby="v-pills-lets-study-tab" tabindex="0">
-              <h3 class="fw-bold">Vedení v <a href="https://lets-study.cz/" target="_Blank">Let's Study</a></h3>
-              <h5 class="darker">Červenec 2021 - Nyní</h5>
+            <div class="tab-pane fade show active" id="v-pills-beastblock" role="tabpanel" aria-labelledby="v-pills-beastblock-tab" tabindex="0">
+              <h3 class="fw-bold">Technik a správce serverů na <a class="url" href="https://beastblock.cz/" target="_Blank">BeastBlock.cz</a></h3>
+              <h5 class="darker">prosinec 2019 - září 2023</h5>
+              <ul class="list-group">
+                <li>Zajímavý projekt youtubera Nakashiho</li>
+                <li>Starám se o plynulý chod serveru a spravuji veškeré servery</li>
+                <li>Vytvářím nový obsah pro naše hráče</li>
+              </ul>
+            </div>
+            <div class="tab-pane fade" id="v-pills-lets-study" role="tabpanel" aria-labelledby="v-pills-letsstudy-tab" tabindex="0">
+              <h3 class="fw-bold">Vedení v <a class="url" href="https://lets-study.cz/" target="_Blank">Let's Study</a></h3>
+              <h5 class="darker">Červenec 2021 - součastnost</h5>
               <ul class="list-group">
                 <li>Projekt o pomoci studentům a žákům základních či středních škol - nejrozšířenější na české/slovenské scéně</li>
                 <li>Grafik pro náš Instagram a Discord, které jsou náš primární cíl</li>
@@ -134,22 +141,13 @@
                 <li>Správce serveru, konzultant a pomocník</li>
               </ul>
             </div>
-            <div class="tab-pane fade" id="v-pills-beastblock" role="tabpanel" aria-labelledby="v-pills-beastblock-tab" tabindex="0">
-              <h3 class="fw-bold">Technik a správce serverů na <a href="https://beastblock.cz/" target="_Blank">BeastBlock.cz</a></h3>
-              <h5 class="darker">Prosinec 2019 - Nyní</h5>
+            <div class="tab-pane fade" id="v-pills-gennario" role="tabpanel" aria-labelledby="v-pills-gennario-tab" tabindex="0">
+              <h3 class="fw-bold">Support na <a class="url" href="https://discord.gg/KemRJhxjah" target="_Blank">Gennario Studios</a></h3>
+              <h5 class="darker">červen 2022 - součastnost</h5>
               <ul class="list-group">
-                <li>Minecraft server YouTubera Nakashiho</li>
-                <li>Spravuji veškeré servery a starám se o jejich běh, plynulost a funkce</li>
-                <li>Přemýšlím o originálních nápadech a občasně pomáhám jako helper</li>
-              </ul>
-            </div>
-            <div class="tab-pane fade" id="v-pills-zerotoil" role="tabpanel" aria-labelledby="v-pills-zerotoil-tab" tabindex="0">
-              <h3 class="fw-bold">Grafik a support na <a href="https://dev.zerotoil.net/" target="_Blank">ZeroToil Development</a></h3>
-              <h5 class="darker">Prosinec 2019 - Nyní</h5>
-              <ul class="list-group">
-                <li>Americký support server pro pluginy od developera Kihsomray a CroaBeast</li>
-                <li>Grafik pro pluginy - loga a celá grafika na Spigot/Polymart/MCMarket stránky</li>
-                <li>Pomoc v ticketech a forum kanálech</li>
+                <li>Discord Support server pro pluginy od studia Gennario</li>
+                <li>Pomáhám v ticketech a v support kanálech</li>
+                <li>Celý vzhled jsem měl na starosti já</li>
               </ul>
             </div>
           </div>
@@ -169,34 +167,34 @@
         <div class="row g-4 mt-4 d-flex justify-content-center">
           <div class="d-flex flex-column flex-column-reverse flex-lg-row row px-3 px-lg-0">
             <div class="col-md px-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500" data-aos-mirror="true" data-aos-once="true">
-              <img src="./assets/content/ServerFinder_Frederick.png" alt="" class="img-fluid rounded-2">
+              <img src="./assets/content/za-play.webp" alt="" class="img-fluid rounded-2">
             </div>
             <div class="col-md text-lg-end px-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500" data-aos-mirror="true" data-aos-once="true">
-              <h6 class="sub-header">Redesign aplikace (frontend)</h5>
-              <h1 class="fw-bold fs-1 url">Server Finder</h1>
-              <p class="mt-3">Najdi doslova jakýkoliv server za minutu! Vyhledej přes 3000 serverů naráz z několika desítek stránek, zkopíruj si jejich IP nebo si je odstraň z výsledků. Aplikace není plnohodnotný projekt a jedná se pouze o jeden z for fun projektů. Originální design a sestavení udělal <a class="url" href="https://thefrederick.xyz/" target="_Blank">TheFrederick</a>.</p>
+              <h6 class="sub-header">Webová stránka (Frontend)</h5>
+              <h1 class="fw-bold fs-1 url">Za-Play.cz</h1>
+              <p class="mt-3">Stránky pro již ukončený herní projekt Za-Play.cz. Pro tento projekt jsem vytvořil jednoduchou stránku s obsahem serveru a spoustu informací.</p>
             </div>
           </div>
           <div class="w-100 my-4"></div>
           <div class="d-flex flex-column flex-column-reverse flex-lg-row row px-3 px-lg-0">
             <div class="col-md px-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="750" data-aos-mirror="true" data-aos-once="true">
-              <h6 class="sub-header mt-3">Webová stránka (Frontend)</h5>
-              <a class="fw-bold fs-1 url" href="https://portal.lets-study.cz/" target="_Blank">Let's Study Portál</a>
-              <p class="mt-3">Portál pro pomoc studentům se školou. Nabízí ty nejlepší učební nástroje a je přehledný. Účet založíš na pár kliknutí a tvá cesta může začít. Vše je zdarma a kdykoliv můžeš vývoj podpořit koupí Study Plus.</p>
+              <h6 class="sub-header mt-3">Discord bot</h5>
+              <h1 class="fw-bold fs-1 url">BeastBlock.cz</h1>
+              <p class="mt-3">Moderační Discord bot, určený k moderaci a ovládání našeho serveru. Napsaný v discord.js.</p>
             </div>
             <div class="col-md px-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="750" data-aos-mirror="true" data-aos-once="true">
-              <img src="./assets/content/lets_study_portal.png" alt="" class="img-fluid rounded-2">
+              <img src="./assets/content/discord.webp" alt="" class="img-fluid rounded-2">
             </div>
           </div>
           <div class="w-100 my-4"></div>
           <div class="d-flex flex-column flex-column-reverse flex-lg-row row px-3 px-lg-0">
             <div class="col-md px-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="1000" data-aos-mirror="true" data-aos-once="true">
-              <img src="./assets/content/lets_study_blog.png" alt="" class="img-fluid rounded-2">
+              <img src="./assets/content/mzdyprovas.webp" alt="" class="img-fluid rounded-2">
             </div>
             <div class="col-md text-lg-end px-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="1000" data-aos-mirror="true" data-aos-once="true">
-              <h6 class="sub-header">Webová stránka (Frontend)</h5>
-              <a class="fw-bold fs-1 url" href="https://blog.lets-study.cz/" target="_Blank">Let's Study Blog</a>
-              <p class="mt-3">Blog o školách, učení, přijímačkách a vlastně o čemkoliv, co se točí okolo vzdělávání. Krom toho najdeš na konci příspěvku i krátký kvíz, abys otestoval své znalosti a pamatování.</p>
+              <h6 class="sub-header mt-3">Webová stránka</h5>
+              <a class="fw-bold fs-1 url" href="https://mzdyprovas.cz/" target="_Blank">Mzdy Pro Vás</a>
+              <p class="mt-3">Webová prezentace pro společnost nabízející mzdové účetnictví. Jednostránková prezentace s formulářem pro kontakt.</p>
             </div>
           </div>
         </div>
@@ -215,10 +213,10 @@
         <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="750" data-aos-mirror="true" data-aos-once="true">Vyhledej si mě na jedné ze sociální sítí nebo si ulož můj Discord a kontaktuj mě tam!</p>
         <div class="row g-2">
           <div class="col-md" data-aos="fade-right" data-aos-duration="750" data-aos-delay="1500" data-aos-mirror="true" data-aos-once="true">
-            <a href="linktree.html" class="btn btn-primary py-3">Otevřít Linktree <i class="ph-link-simple-bold ms-2"></i></a>
+            <a href="#" class="btn btn-primary py-3">??? <i class="ph-link-simple-bold ms-2"></i></a>
           </div>
           <div class="col-md" data-aos="fade-right" data-aos-duration="750" data-aos-delay="1250" data-aos-mirror="true" data-aos-once="true">
-              <button class="btn btn-outline-info py-3 w-100 btn-copy" id="copyButton" onclick="copyFunction()">Kléma#2152 <i class="ph-discord-logo-bold ms-2"></i></button>
+              <button class="btn btn-outline-info py-3 w-100 btn-copy" id="copyButton" onclick="copyFunction()">friggo <i class="ph-discord-logo-bold ms-2"></i></button>
           </div>
         </div>
       </div>
@@ -226,7 +224,7 @@
       </div>
 
       <footer class="d-flex flex-wrap justify-content-center align-items-center my-4">
-          <span>© 2022 Adam Klement | Chceš taky web? Zkus to <a href="https://github.com/klema4" target="_Blank">zde</a>.</span>
+          <span>© 2024 Friggo.cz | Chceš taky web? Zkus to <a href="https://github.com/mrfriggo" target="_Blank">zde</a>.</span>
       </footer>
     </div>
   </div>
